--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,4 +2,6 @@
   <div class="right tomster"></div>
   <h2>Welcome to Super Rentals!</h2>
   <p>We hope you find exactly what you're looking for in a place to stay.</p>
+  <p>Мы надеемся, Вы найдете именно то место для жилья, которое ищете. </p>
+  <LinkTo @route="about" class="button">About Us</LinkTo>
 </div>
