--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,12 +1,12 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<NavBar/>
+<Jumbo>
   <h2>Contact Us</h2>
   <p>
     Super Rentals Representatives would love to help you<br>
     choose a destination or answer any questions you may have.
   </p>
   <p>
-    Представители Super Rentals  с радостью помогут Вам <br>
+    Представители Super Rentals с радостью помогут Вам <br>
     выбрать место путешествия или ответят на любые Ваши вопросы.
   </p>
   <address>
@@ -19,4 +19,4 @@
     <a href="mailto:superrentalsrep@emberjs.com">superrentalsrep@emberjs.com</a>
   </address>
   <LinkTo @route="about" class="button">About</LinkTo>
-</div>
+</Jumbo>
