--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,5 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<NavBar/>
+<Jumbo>
   <h2>About Super Rentals</h2>
   <p>
     The Super Rentals website is a delightful project created to explore Ember.
@@ -11,4 +11,4 @@
     Создавая сайт съема жилья, мы одновременно представляем путешествие И создаем приложение Ember.
   </p>
   <LinkTo @route="contact" class="button">Contact Us</LinkTo>
-</div>
+</Jumbo>
