--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<NavBar/>
+<Jumbo>
   <h2>Welcome to Super Rentals!</h2>
   <p>We hope you find exactly what you're looking for in a place to stay.</p>
   <p>Мы надеемся, Вы найдете именно то место для жилья, которое ищете. </p>
   <LinkTo @route="about" class="button">About Us</LinkTo>
-</div>
+</Jumbo>
