--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,3 @@
-<NavBar/>
 <Jumbo>
   <h2>About Super Rentals</h2>
   <p>
@@ -8,7 +7,7 @@
   </p>
   <p>
     Вебсайт Super Rentals - это выдающийся проект, созданный при исследовании Ember.
-    Создавая сайт съема жилья, мы одновременно представляем путешествие И создаем приложение Ember.
+    Создавая сайт съема жилья, мы одновременно мысленно  путешествуем И создаем приложение Ember.
   </p>
   <LinkTo @route="contact" class="button">Contact Us</LinkTo>
 </Jumbo>
