--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -81,7 +81,7 @@ p {
   height: 4em;
   background-color: #677ae4;
   background-color: #05526A;
-  background-color: #e46855;
+  /*background-color: #e46855;*/
 }
 
 .menu h1 {
