--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,10 +4,12 @@
   <p>Мы надеемся, Вы найдете именно то место для жилья, которое ищете. </p>
   <LinkTo @route="about" class="button">About Us</LinkTo>
 </Jumbo>
+
+
 <div class="rentals">
   <ul class="results">
-    <li><Rental /></li>
-    <li><Rental /></li>
-    <li><Rental /></li>
+    <li><Rental @rental={{@model}} /></li>
+    <li><Rental @rental={{@model}} /></li>
+    <li><Rental @rental={{@model}} /></li>
   </ul>
 </div>
