--- a/app/components/rental.hbs
+++ b/app/components/rental.hbs
@@ -1,10 +1,15 @@
 <article class="rental">
   <Rental::Image
-    src={{@rental.image}}
-    alt="A picture of {{@rental.title}}"
-    />
+          src={{@rental.image}}
+          alt="A picture of {{@rental.title}}"
+  />
   <div class="details">
-    <h3>{{@rental.title}}</h3>
+
+    <h3>
+      <LinkTo @route="rental" @model={{@rental}}>
+        {{@rental.title}}
+      </LinkTo>
+    </h3>
     <div class="detail owner">
       <span>Owner:</span> {{@rental.owner}}
     </div>
@@ -14,7 +19,7 @@
     <div class="detail location">
       <span>Location:</span> {{@rental.city}}
     </div>
-   <div class="detail bedrooms">
+    <div class="detail bedrooms">
      <span>Number of bedrooms:</span> {{@rental.bedrooms}}
    </div>
   </div>
