--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,8 +6,8 @@
     AND building Ember applications.
   </p>
   <p>
-    Вебсайт Super Rentals - это выдающийся проект, созданный при исследовании Ember.
-    Создавая сайт съема жилья, мы одновременно мысленно  путешествуем И создаем приложение Ember.
+    Вебсайт Super Rentals - это выдающийся проект, созданный в процессе исследования Ember.
+    Создавая сайт поиска жилья, мы одновременно мысленно путешествуем И создаем приложение Ember.
   </p>
   <LinkTo @route="contact" class="button">Contact Us</LinkTo>
 </Jumbo>
