--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -1,7 +1,7 @@
 <Jumbo>
   <h2>{{@rental.title}}</h2>
   <p>Nice find! This looks like a nice place to stay near {{@rental.city}}.</p>
-  <p>Хороший выбор!  {{@rental.city}} приятное место для проживания.</p>
+  <p>Хороший выбор!  {{@rental.city}} - приятное место для проживания.</p>
   <ShareButton
           @text="Check out {{@rental.title}} on Super Rentals!"
           @hashtags="vacation,travel,authentic,blessed,superrentals"
